@@ -388,6 +388,8 @@ CONFIG_RELAY=y
 #
 CONFIG_RELAY_GPIO=12
 CONFIG_RELAY_ON=1
+CONFIG_RELAY_RESTORE=y
+CONFIG_RELAY_POWERUP_ON=0
 CONFIG_CAMERA=
 CONFIG_NIGHTSKY=
 
